# personal-logbook

./: .gitignore  README.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  run.py  tailwind.config.js
logbook/: __init__.py  auth.py  controllers.py  default_settings.py  helpers.py  models.py  views.py
logbook/static/: styles.css
logbook/static/css/: main.css  pygments.css
logbook/templates/: base.html  base_nav.html  edit_log.html  index.html  login.html  new_log_form.html  signup.html
logbook/templates/components/: logs_list.html  navbar.html  new_log_form.html  pagination_buttons.html
personal-logbook/: __init__.py
personal-logbook/model/: __init__.py  database.py
personal-logbook/view/: index.html
tests/: test_logbook.py
