[tool.poetry]
name = "logbook"
version = "0.2.0"
description = "A logbook for our everyday human activities"
authors = ["Nicola Zanardi <mildlyinteresting@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.7.0"
peewee = "^3.10.0"
markdown2 = "^2.4"
humanize = "^0.5.1"
flask = "^1.1"
pygments = "^2.7"
flask-assets = "^0.12.0"
flask-login = "^0.4.1"
gunicorn = "^20.0"
poetry = "^1.1"

[tool.poetry.dev-dependencies]
black = "^19.3b0"